# scratchpad

./: .controller.env.sample  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh  scratchpad.toml  scratchpad.toml.example  start.sh  stop.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
_deployer/helpers/: instances.js
_deployer/routes/: deployments.js
benches/: config_benchmarks.rs  scratch_benchmarks.rs
controller/: .mockchain.env.sample  .pg.env.sample  build-docker-compose.sh  create-scratch.sh  docker-compose-template.yml  docker-compose.template.yml  docker-compose.yml  for-each-release.sh  start-controller.sh
controller/docker-services.d/: .gitignore  postgres.yml
deployer/: Dockerfile  index.js  package-lock.json  package.json
deployer/helpers/: branches.js  cache.js  github.js  instances.js
deployer/public/: index.html  style.css  version.json
deployer/routes/: controller.js  deployments.js  github.js  images.js  instances.js
frontend/: .eslintrc.js  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
images/nginx/: nginx.conf
images/sockets/: Dockerfile  (+1 more)
src/: error.rs  lib.rs  main.rs
templates/: .api.env.sample  .bn-cube.env.sample  .web.env.sample  building.html  delete.sh  docker-compose.sh  docker-compose.template.yml  docker-compose.yml  manage-instance.sh
tests/: api_crud_tests.rs  api_integration_tests.rs  api_tests.rs  auth_tests.rs  cli_tests.rs  concurrent_tests.rs  docker_tests.rs  e2e_tests.rs  error_scenarios_tests.rs  github_webhook_tests.rs  integration_tests.rs  nginx_tests.rs  scratch_operations_tests.rs  services_tests.rs
(+40 files in other folders)
